Small improvements on code readability + added one test case